Stop detailed guides scrolling sideways on mobile
Due to the negative margins detailed guides were able to scroll sideways
when at a mobile resolution. In general we should try and avoid negative
margins as they are evil.

--- a/app/assets/stylesheets/frontend/views/_detailed_guides.scss
+++ b/app/assets/stylesheets/frontend/views/_detailed_guides.scss
@@ -272,15 +272,28 @@
   }
 
 
-  .aside-more-like-this {
-    margin: 0 -$gutter;
+  .block.related-links {
+    padding-bottom: 0;
+    @include media(desktop){
+      padding-bottom: $gutter;
+    }
 
+    .inner-block {
+      @include media(desktop){
+        padding: 0;
+      }
+    }
+  }
+
+  .aside-more-like-this {
     h1 {
       @include ig-core-27;
       background: $detailed-guidance-brand;
       color: $white;
-      margin: $gutter;
       padding: $gutter-one-third;
+      @include media(desktop){
+        margin: $gutter;
+      }
     }
 
     section {
@@ -290,7 +303,9 @@
       }
 
       .inner {
-        margin: 0 $gutter;
+        @include media(desktop){
+          margin: 0 $gutter;
+        }
       }
 
       h2 {
